{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 17,
  "lineage": "60444fef-559c-55af-6ba3-598b06621f9f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:vpc/vpc-0c2acbaf494157a04",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a9fbdf95012c99ef",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-06d132e565a8e15f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2acbaf494157a04",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01d7c298510d61c4e",
            "owner_id": "375010587682",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "back_burguermarina_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062879e4c5f3b3696",
            "arn": "arn:aws:ec2:us-east-1:375010587682:elastic-ip/eipalloc-062879e4c5f3b3696",
            "association_id": "eipassoc-016178c7fc5abd337",
            "domain": "vpc",
            "id": "eipalloc-062879e4c5f3b3696",
            "instance": "i-04e8cbce7572a8f45",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09534ac5bd8e15049",
            "private_dns": "ip-172-31-91-65.ec2.internal",
            "private_ip": "172.31.91.65",
            "public_dns": "ec2-3-235-122-191.compute-1.amazonaws.com",
            "public_ip": "3.235.122.191",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "Back-burguerMarina-eip"
            },
            "tags_all": {
              "Name": "Back-burguerMarina-eip"
            }
          },
          "dependencies": [
            "aws_instance.back_burguermarina",
            "aws_security_group.allow_all_burguermarina",
            "aws_security_group.allow_ssh_burguermarina",
            "aws_security_group.back_group_burguermarina",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "front_burguermarina_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0717cf90f5807ee88",
            "arn": "arn:aws:ec2:us-east-1:375010587682:elastic-ip/eipalloc-0717cf90f5807ee88",
            "association_id": "eipassoc-079eae10ab05308c9",
            "domain": "vpc",
            "id": "eipalloc-0717cf90f5807ee88",
            "instance": "i-04cf55eb61808205f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0018941d0715f432d",
            "private_dns": "ip-172-31-89-107.ec2.internal",
            "private_ip": "172.31.89.107",
            "public_dns": "ec2-32-193-29-185.compute-1.amazonaws.com",
            "public_ip": "32.193.29.185",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "Front-burguerMarina-eip"
            },
            "tags_all": {
              "Name": "Front-burguerMarina-eip"
            }
          },
          "dependencies": [
            "aws_instance.front_burguermarina",
            "aws_security_group.allow_all_burguermarina",
            "aws_security_group.allow_ssh_burguermarina",
            "aws_security_group.front_group_burguermarina",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "back_burguermarina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00403f401ee6a4b98",
            "arn": "arn:aws:ec2:us-east-1:375010587682:instance/i-04e8cbce7572a8f45",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e8cbce7572a8f45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09534ac5bd8e15049"
              }
            ],
            "primary_network_interface_id": "eni-09534ac5bd8e15049",
            "private_dns": "ip-172-31-91-65.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.91.65",
            "public_dns": "ec2-34-207-66-58.compute-1.amazonaws.com",
            "public_ip": "34.207.66.58",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d8d3642866a3d9a3",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "Allow ALL burguerMarina Salida",
              "Allow SSH burguerMarina",
              "Back group burguerMarina"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062037b99ef333e98",
            "tags": {
              "Name": "Back-burguerMarina"
            },
            "tags_all": {
              "Name": "Back-burguerMarina"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-09ef342c9e02a169a",
              "sg-0b61b658120061dd3",
              "sg-0b6cdac4ca3497c5f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all_burguermarina",
            "aws_security_group.allow_ssh_burguermarina",
            "aws_security_group.back_group_burguermarina",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "front_burguermarina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00403f401ee6a4b98",
            "arn": "arn:aws:ec2:us-east-1:375010587682:instance/i-04cf55eb61808205f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cf55eb61808205f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0018941d0715f432d"
              }
            ],
            "primary_network_interface_id": "eni-0018941d0715f432d",
            "private_dns": "ip-172-31-89-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.89.107",
            "public_dns": "ec2-54-211-5-30.compute-1.amazonaws.com",
            "public_ip": "54.211.5.30",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020891648145c074c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Allow ALL burguerMarina Salida",
              "Allow SSH burguerMarina",
              "Front Group burguerMarina"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062037b99ef333e98",
            "tags": {
              "Name": "Front-burguerMarina"
            },
            "tags_all": {
              "Name": "Front-burguerMarina"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-07bdcfbc5da6e67ed",
              "sg-09ef342c9e02a169a",
              "sg-0b6cdac4ca3497c5f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all_burguermarina",
            "aws_security_group.allow_ssh_burguermarina",
            "aws_security_group.front_group_burguermarina",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_burguermarina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:security-group/sg-09ef342c9e02a169a",
            "description": "Grupo de seguridad para abrir los puertos de salida",
            "egress": [],
            "id": "sg-09ef342c9e02a169a",
            "ingress": [],
            "name": "Allow ALL burguerMarina Salida",
            "name_prefix": "",
            "owner_id": "375010587682",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2acbaf494157a04"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_burguermarina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:security-group/sg-0b6cdac4ca3497c5f",
            "description": "Grupo de seguridad para permitir la conexion por ssh",
            "egress": [],
            "id": "sg-0b6cdac4ca3497c5f",
            "ingress": [],
            "name": "Allow SSH burguerMarina",
            "name_prefix": "",
            "owner_id": "375010587682",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2acbaf494157a04"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back_group_burguermarina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:security-group/sg-0b61b658120061dd3",
            "description": "Grupo de seguridad para la instancia de back",
            "egress": [],
            "id": "sg-0b61b658120061dd3",
            "ingress": [],
            "name": "Back group burguerMarina",
            "name_prefix": "",
            "owner_id": "375010587682",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2acbaf494157a04"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_group_burguermarina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:security-group/sg-07bdcfbc5da6e67ed",
            "description": "Grupo de seguridad para la instancia de front",
            "egress": [],
            "id": "sg-07bdcfbc5da6e67ed",
            "ingress": [],
            "name": "Front Group burguerMarina",
            "name_prefix": "",
            "owner_id": "375010587682",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2acbaf494157a04"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_burguermarina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:security-group-rule/sgr-0d05857dc6491791b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d05857dc6491791b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09ef342c9e02a169a",
            "security_group_rule_id": "sgr-0d05857dc6491791b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_all_burguermarina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_8000_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:security-group-rule/sgr-08d61fcdff62327cf",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-08d61fcdff62327cf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07bdcfbc5da6e67ed",
            "region": "us-east-1",
            "security_group_id": "sg-0b61b658120061dd3",
            "security_group_rule_id": "sgr-08d61fcdff62327cf",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.back_group_burguermarina",
            "aws_security_group.front_group_burguermarina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_8000_back_directo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:security-group-rule/sgr-0837533cd513bba9b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-0837533cd513bba9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b61b658120061dd3",
            "security_group_rule_id": "sgr-0837533cd513bba9b",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.back_group_burguermarina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_front_burguermarina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:security-group-rule/sgr-0145ebfa4bbe4b8ce",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0145ebfa4bbe4b8ce",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07bdcfbc5da6e67ed",
            "security_group_rule_id": "sgr-0145ebfa4bbe4b8ce",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.front_group_burguermarina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_front_burguermarina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:security-group-rule/sgr-054ef6cf464e46915",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-054ef6cf464e46915",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-07bdcfbc5da6e67ed",
            "security_group_rule_id": "sgr-054ef6cf464e46915",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.front_group_burguermarina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_burguermarina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375010587682:security-group-rule/sgr-0a3a1f4e66d2bf5e9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a3a1f4e66d2bf5e9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b6cdac4ca3497c5f",
            "security_group_rule_id": "sgr-0a3a1f4e66d2bf5e9",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_burguermarina"
          ]
        }
      ]
    }
  ]
}